--- a/hc-framework-main/entries/Homepage.html
+++ b/hc-framework-main/entries/Homepage.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/Kiara.css">
+    <link rel="stylesheet" href="../css/animals.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="../images/Icon.png">
@@ -114,6 +115,7 @@
                 <ul style="list-style-type: none; padding: 0; display: flex; gap: 1rem;">
                     <li><a href="../entries/Squirrels.html" style="color: white; text-decoration: none;">Squirrels</a></li>
                     <li><a href="../entries/Oyster.html" style="color: white; text-decoration: none;">Oysters</a></li>
+                    <li><a href="../entries/Red-tailed-hawk.html" style="color: white; text-decoration: none;">Red-tailed-hawk</a></li>
                     <li><a href="#" style="color: white; text-decoration: none;">Contact</a></li>
                     <li><button class="theme-switcher" id="themeSwitcher" aria-label="Toggle dark mode">🌞</button></li>
                 </ul>
