--- a/hc-framework-main/entries/Red-tailed-hawk.html
+++ b/hc-framework-main/entries/Red-tailed-hawk.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Enter if you dare</title>
+  <title>Red Tailed Hawk</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -18,34 +18,96 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/Kiara.css">
+  <link rel="stylesheet" href="../css/animals.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="../images/favicon.ico">
 </head>
-
+<style>
+  
+  h1{color:blueviolet;
+    background-color:lightblue;
+    text-align: center;
+  }
+  #OwO {
+    color: brown;
+  }
+  .becomered{
+    color:red;
+    font-size:2em;
+  }
+  .becomebig{
+    font-size:3em;
+    text-align: center;
+  }
+</style>
 <body>
+  <h1>Red Tailed Hawk</h1>
+<h1 class="becomered">Coexisting with Red-Tailed Hawks</h1>
 <header>
   <article>
   </header>
-  <div>
+  <p>
+    <pre>
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣤⣤⣤⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣤⣤⣤⣀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+      ⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣿⣿⣿⣿⣿⣿⡿⠿⠿⠛⠛⠛⠛⠻⠿⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+      ⠀⠀⠀⠀⣀⣀⣠⣤⡾⢿⣿⣿⠿⠟⠉⠉⠀⠀⣠⣴⣶⣖⠒⡤⠀⠠⢾⣿⣭⣭⣾⣛⣻⣿⣿⣿⣿⣯⣍⣛⡿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+      ⠀⢀⡴⠛⠉⢁⣀⠀⢤⡀⠹⣇⠀⠢⠂⠀⠤⣾⠹⣿⣷⣟⡴⠃⠀⣀⣼⣭⣟⠛⠯⠭⠼⠿⢿⣿⣿⣿⣿⣿⣯⣽⣻⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+      ⢀⡟⠁⢀⠎⠁⠀⠀⠈⠉⠆⠻⣿⣶⣀⣀⠀⠈⠓⠶⠶⠋⢁⣰⣾⣿⣭⡷⢖⣚⣿⠂⠌⣛⣻⣿⣿⣿⣿⣿⣿⣿⣿⣷⣿⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀
+      ⢸⠁⠀⠀⠀⠀⠀⠀⠐⠲⠶⢄⠈⢿⣿⣿⣿⣿⣿⣷⡾⠿⠿⢿⣿⣞⠳⠾⣷⣻⢿⣯⠽⠛⠛⠉⣹⣿⣿⣿⣿⣿⣿⣿⣿⣝⢦⠀⠀⠀⠀⠀⠀⠀⠀
+      ⢸⠀⠀⢀⡠⠖⠛⠛⠛⠲⣄⡀⠑⠈⢿⣿⣿⣿⣿⣿⣿⣋⣩⠭⣒⣛⠭⡗⣶⠽⠛⠋⠉⠀⣀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡻⢧⡀⠀⠀⠀⠀⠀⠀
+      ⠸⡀⡠⠊⠉⠐⠲⢤⡂⢀⠀⠙⢦⡀⣀⠙⣿⣿⣿⣿⣿⣷⣶⠁⣲⣮⣝⣺⠷⠆⠀⠀⠀⣤⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⣵⡀⠀⠀⠀⠀⠀
+      ⠀⠑⠁⠀⠀⠀⠀⠀⠈⠓⠷⣤⣠⣙⠻⠀⢸⣿⣿⣿⣿⣿⣿⣦⣶⡞⠉⠀⠀⠀⠀⠀⠸⠿⠛⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡀⠀⠀⠀⠀
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⢤⠤⠝⠲⢿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠛⠁⠀⠀⠀⠀⠀⠴⠾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡄⠀⠀⠀
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠳⠁⠄⠀⠘⢿⣿⣿⣿⣿⣿⡟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣤⣬⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⠀
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠇⡀⠀⠀⠀⣽⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⠀⠀
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢹⠀⠀⠀⠀⢹⣿⣿⣿⣷⡂⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣤⣤⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀⠀
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡆⠀⠀⠀⠘⣿⣿⡿⢟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠙⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡐⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡍⠀⠀⠀⠀⠀⣀⠤⠤⠤⠀⠒⠒⢤⡤⠴⠞⠛⠻⠿⠛⠛⠛⠛⠛⠛⠋⠙⣿⠏⢻⣻⣿⣿⣿⣿⣿⣿⣿⡇
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⡠⣶⠟⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠃⠙⠿⠻⢿⠿⠿⠿⡇
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    </pre>
+
+      &nbsp; Red-tailed hawks are working hard to earn a place in the hearts of their fellow New Yorkers.
+    </p>
+    <li><a href="../entries/Homepage.html" style="color: rgb(16, 212, 124); text-decoration: none;">Return to the homepage</a></li>
+  <div class="hawkboxQwQ">
     <ul>
-      <li>where to live</li>
-      <li>How to find food</li>
-      <li>others</li>
+      <li>As of 2016, there were at least 20 red-tailed hawk nests in Manhattan. In 2010 there were just eight (The National Audubon Society, 2016)</li>
+      <li>Red-tailed hawks are top predators themselves and have no natural predators. Nonetheless, their eggs and nestlings are sometimes preyed on by great-horned owls, crows, raccoons, and red foxes.</li>
+      <li>There are approximately 2.3 million breeding individuals worldwide. Nearly 75% of all red-tailed hawks spend portions of the year in the United States (Cornell Lab or Ornithology, 2015).</li>
+      <li>Pale Male, the famous red-tailed hawk and Manhattan resident, is believed to have fathered nearly 30 chicks in his lifetime (The National Audubon Society, 2016).d</li>
+      <li>Migration does not occur often, but can be triggered by inadequate food resources. When it does occur, it takes place in the late fall and early spring in either an individual or group capacity.
+      </li>
     </ul>
   </div>
+  <div class="hawkpage">
+    <a href=""class=selected>1</a><a href="">2</a><a href="">3</a><a href="">4</a><a href="">5</a><a href="">6</a><a href="">7</a><a href="">8</a><a href="">9</a><a href="">10</a>
+  </div>
+  <img class="ss" src="../images/lingshi/Red_Tailed_Hawk_Perched_iStock-800px.jpg" alt="image of selling oysters">
+  <div class="hawkintro">
+    <p>In many ways, the relationship between New Yorkers and red-tailed hawks (Buteo jamaicensis) is the ideal of human-wildlife coexistence. They provide free pest control for the city, with a majority of their diet consisting of rats and mice.</p>
+    <p class="bcd">In turn, the city works to cut down on the use of rat poisons in areas where the hawks nest so that they do not accidentally eat poisoned rodents.</p>
+    <p>QCity buildings and bridges also provide ideal nesting sites for urban hawks. It is an arrangement that benefits everyone involved—except, obviously, the rodents.</p>
+  </div>
     <section>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam delectus esse ullam ut praesentium doloremque possimus accusamus odit tenetur quidem quod nemo sed, incidunt libero minus numquam iure reiciendis harum rerum aspernatur dicta suscipit mollitia quasi. Hic placeat voluptas, natus cumque, quam pariatur minus commodi tenetur ipsam vel vitae doloremque? Non, eveniet. Nisi id magni assumenda deleniti reprehenderit a deserunt, maxime labore eligendi cum fugit laborum esse cupiditate tenetur libero, veritatis illum odio quo vitae ea non, blanditiis placeat hic. Provident perspiciatis minus, adipisci quia, nulla sequi possimus in rem ducimus magni, perferendis explicabo neque officia asperiores dignissimos dolores quo!</p>
-      <p>Nobis esse iste officiis error blanditiis distinctio pariatur ut sint, nulla, maiores quae fugit explicabo at, ea quo natus eum voluptas alias rerum earum ad molestiae cum! Totam, error temporibus aperiam laudantium excepturi accusamus laborum perspiciatis! Laudantium, hic. Ducimus provident odio, laborum quod hic tenetur illo non aliquam ipsum officia exercitationem fuga quaerat iusto beatae delectus possimus sapiente dolorem doloremque nobis? Facilis, dolorum culpa, molestiae dolores, ducimus aut magnam voluptate amet in unde est. Iste error minus, similique quas maiores aperiam illum in delectus veritatis possimus non corporis tempore asperiores pariatur quibusdam ipsam ullam distinctio quis nesciunt nulla suscipit saepe?</p>
-      <p>Nesciunt eos fugiat voluptas tenetur totam exercitationem consequatur blanditiis molestias vel molestiae sapiente pariatur sunt id nostrum perspiciatis similique itaque eveniet, nam deleniti aliquam culpa excepturi iure voluptatibus. Eveniet sed delectus odit, enim voluptatibus architecto reiciendis ut non autem amet consectetur provident. Cum eligendi provident dolor dolorum! Totam, corrupti? Suscipit aliquid delectus fugiat. Natus ratione dolores ab aut. Eveniet ab quibusdam nam ea aliquid, dolore, at debitis ut blanditiis illum expedita temporibus officia, amet deserunt provident pariatur natus odio? Harum velit amet inventore repellendus atque nemo eaque non qui repudiandae quidem minus ab error exercitationem nesciunt, debitis similique cum alias!</p>
+      <p Id="OwO">Do not feed red-tailed hawks. Red-tailed hawks are expert hunters and do not need help finding food. Feeding them can cause them to lose their natural hunting instincts.</p>
+      <p>Observe and enjoy red-tailed hawks from a distance. Adult red-tailed hawks should always be admired from afar using binoculars or a scope. If you see a juvenile on the ground, there's no need to approach it. The young bird is likely learning how to fly, and its parents may be nearby watching over it.</p>
+      <p>Use snap traps rather than poison to control rodent populations. Eating rodents that have been poisoned can make red-tailed hawks ill.</p>
     </section>
   </article>
+  <div>
+    
+  </div>
   <aside>
-    侧边栏
+    side
   </aside>
   <footer>
-    
+  
   </footer>
 </body>
 </html>
