--- a/hc-framework-main/entries/Squirrels.html
+++ b/hc-framework-main/entries/Squirrels.html
@@ -13,6 +13,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/animals.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="../images/favicon.ico">
@@ -85,7 +86,7 @@
                 <img src="../images/Home.png" alt="Squirrel Dreys">
             </div>
             <div class="text-container">
-                <p>Property Features:</p>
+                <p class="red-big-center">Property Features:</p>
                 <p>1. High Tree Hollows: Located in tall trees, these hollows are safe from predators and extremely comfortable. Made from twigs, leaves, and soft materials, they provide cozy and hidden shelter.</p>
                 <p>2. Natural Nests: Some tree-top nests, known as “dreys,” are made of twigs and leaves. They are sturdy and warm, suited for rainy days or chilly nights.</p>
                 <p>Grey squirrels forage in the cooler parts of the day, rest at noon, and become active again in the evening. We suggest checking in around noon to align with the landlord’s schedule.</p>
@@ -106,7 +107,9 @@
             <a href="#">About</a>
             <a href="#">Contact</a>
             <a href="fluffy-new-yorker.html">Back to Squirrel Dreys</a> <!-- Link to the first page -->
+            <li><a href="../entries/Homepage.html" style="color: rgb(16, 212, 124); text-decoration: none;">Return to the homepage</a></li>
         </nav>
+        <img src="../images/entry1.png" alt="image of selling oysters">
         <p>&copy; 2024 Kiara | Unique Rentals</p>
     </footer>
 
