--- a/hc-framework-main/entries/Oyster.html
+++ b/hc-framework-main/entries/Oyster.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/Kiara.css">
+  <link rel="stylesheet" href="../css/animals.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -44,6 +45,7 @@
 
       &nbsp; Hello fellow oysters! I’m part of a growing community in New York Harbor, and I’m calling out to you to join me in our vital mission: restoring the natural balance of our home. Once, oysters like us covered this harbor, filtering water, creating habitats, and even protecting the city from storms. But now, it’s time for a comeback, and we need your help.
     </p>
+    <img class="ssr" src="../images/Oysters/pixoyster/worldoyster.png" alt="image of selling oysters">
     <img src="../images/Oysters/colorful-tank.jpg" alt="image of selling oysters">
     <li><a href="../entries/Homepage.html" style="color: rgb(16, 212, 124); text-decoration: none;">Return to the homepage</a></li>
 
@@ -57,17 +59,22 @@
     
     <h2 id="chapter1">Interesting Fact1</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, harum excepturi modi labore cupiditate repellat quibusdam animi sapiente ipsum deserunt ducimus minus commodi delectus non architecto veritatis, error similique nesciunt.</p>
+    <img class="ss" src="../images/Oysters/pixoyster/blueoyster.png" alt="image of selling oysters">
     <h2 id="chapter2">Interesting Fact2</h2>
     <p>Minima itaque ipsam, tenetur quam, excepturi illo dolor laborum suscipit animi quidem pariatur! Neque, facilis temporibus. Aperiam maxime neque dolor omnis et accusamus ipsa officia, quia vero cum sapiente enim.</p>
+    <img class="ss" src="../images/Oysters/pixoyster/bluegreenoyster.png" alt="image of selling oysters">
     <h2 id="chapter3">Interesting Fact3</h2>
     <p>Officia facilis nam dignissimos, sequi expedita quo eum voluptatem ea deserunt esse, quod, eveniet explicabo repellat sit ut? Qui ex assumenda necessitatibus voluptatibus odio, ab aperiam optio nisi reiciendis ut?</p>
+    <img class="ss" src="../images/Oysters/pixoyster/greenoyster.png" alt="image of selling oysters">
     <h2 id="chapter4">Interesting Fact4</h2>
     <p>Molestias dolores dolore, dignissimos assumenda quis veritatis doloribus quasi repellendus similique possimus, ullam libero facere odit architecto tempora labore! Ex omnis quos pariatur architecto minima harum praesentium sequi quisquam veniam?</p>
+    <img class="ss" src="../images/Oysters/pixoyster/sleepingoyster.png" alt="image of selling oysters">
     <h2 id="chapter5">Interesting Fact5</h2>
     <p>Quisquam rerum ad perferendis ab, recusandae fugiat, a architecto laudantium, sint vitae necessitatibus eum? Amet perspiciatis aliquid, dolorum exercitationem cupiditate consequuntur culpa, quas a, quam numquam voluptas quibusdam provident repudiandae.</p>
     <h2 id="chapter6">Interesting Fact6</h2>
     <p>Harum magnam nostrum consequuntur odio doloribus minus fuga nisi laudantium vitae eum dolorum repellendus, praesentium incidunt pariatur voluptates velit culpa placeat atque error tempora exercitationem quaerat animi ipsum? Ex, laboriosam!</p>   
     </P>
+    <img class="ss" src="../images/Oysters/seaside-table.JPG" alt="image of selling oysters">
 
     <a href="#">Return to Top</a> 
     
