--- a/hc-framework-main/entries/psychological-horror.html
+++ b/hc-framework-main/entries/psychological-horror.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/enter.css">
+  <link rel="stylesheet" href="../css/animals.css">
 
 
   <!-- Favicon
