--- a/hc-framework-main/index.html
+++ b/hc-framework-main/index.html
@@ -1,114 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Basic Page Needs -->
+    <meta charset="utf-8">
+    <title>Fluffy New Yorker - Unique Short-Term Rentals</title>
+    <meta name="description" content="Squirrel Dreys - Short-term rental experiences with furry hosts">
+    <meta name="author" content="Kiara">
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Your page title here :)</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <!-- Mobile Specific Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/Kiara.css">
+    <link rel="stylesheet" href="css/animals.css">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/Icon.png">
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+    <style>
+        body {
+            width: 100%;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #7C6F4F;
+            color: white;
+        }
 
+        header {
+            padding: 1rem;
+        }
 
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.ico">
+        header nav {
+            display: flex;
+            justify-content: space-between;
+            color: white;
+        }
+
+        main {
+            padding: 2rem;
+        }
+
+        .logo-title {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .title-block {
+            text-align: center;
+            margin: 2rem 0;
+        }
+
+        .tertiary-block {
+            text-align: center;
+            margin: 2rem 0;
+        }
+
+        .button-set {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+        }
+
+        .custom-button {
+            background-color: #4B3D29;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 1rem;
+            margin: 2rem 0;
+        }
+
+        .card {
+            background-color: #4B3D29;
+            padding: 1rem;
+            text-align: center;
+            border-radius: 8px;
+        }
+
+        img {
+            max-width: 100%; /* Ensure the image fits within its container */
+            height: auto; /* Maintain aspect ratio */
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            color: white;
+            margin-top: 2rem;
+        }
+    </style>
 
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
-  <main>
-  <section class="grid-container col-2">
-    <div>
-      <h1>My collection</h1>
-      <h3>Mike Bowser</h3>
-      <p>
-        Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipiscing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-        enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-        officia deserunt mollit anim id est laborum.
-      </p>
-    </div>
-    <figure>
-      <img src="images/starbrick_5587.jpg" alt="art image" />
-      <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra mi et varius tincidunt.</figcaption>
-      <a href="entry-example-blocks.html">Starbrick exhibition</a>
-  </figure>
-  </section>
-  <section class="grid-container col-3">
-    <figure>
-      <img src="images/2021_09_24_02_model_of_invisible_futures_02_small.jpg" alt="art image" />
-      <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra mi et varius tincidunt.</figcaption>
-  </figure>
-  <figure>
-    <img src="images/2021_10_07_210517_FA_LOGO_trans-background_SMALL.jpg" alt="art image" />
-    <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra mi et varius tincidunt.</figcaption>
-</figure>
-<figure>
-  <img src="images/dsc_0099_3007118864_o.jpg" alt="art image" />
-  <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra mi et varius tincidunt.</figcaption>
-</figure>
-  </section>
-  <section class="grid-container col-3">
-    <figure>
-      <img src="images/Denzil-Forrester-1993-Dub-Dance-2-840x560-c-center.jpg" alt="art image" />
-      <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra mi et varius tincidunt.</figcaption>
-  </figure>
-  <figure>
-    <img src="images/dsc_0122_3007119766_o.jpg" alt="art image" />
-    <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra mi et varius tincidunt.</figcaption>
-</figure>
-<figure>
-  <img src="images/installshot-Odyssey-and-Liberty-Coin.jpg" alt="art image" />
-  <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra mi et varius tincidunt.</figcaption>
-</figure>
-  </section>
-  <section class="grid-container col-4">
-    <figure>
-      <img src="images/sk-Radiohead-In-Rainbows-111915-58.jpg" alt="art image" />
-      <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra mi et varius tincidunt.</figcaption>
-  </figure>
-  <figure>
-    <img src="images/1_MB_Anna_Marrow_Doggie_Jo_Hounsome_Photography_1_grande.webp" alt="art image" />
-    <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra mi et varius tincidunt.</figcaption>
-</figure>
-<figure>
-  <img src="images/building.jpg" alt="art image" />
-  <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra mi et varius tincidunt.</figcaption>
-</figure>
-<figure>
-  <img src="images/2021_09_24_02_model_of_invisible_futures_02_small.jpg" alt="art image" />
-  <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra mi et varius tincidunt.</figcaption>
-</figure>
-  </section>
-</main>
-  <footer>
-    <h3>Harmonic Collection</h3>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-    <p>&copy; 2024 designer name and info</p>
-  </footer>
+    <a href="Oyster.html">
+        Oyster
+        entries - > Oyster
+    </a>
+    <a herf="mailto:lik276@newschool.edu">
+        click this to send an email
+    </a>
+    <header>
+        <div class="logo-title">
+            <div class="logo">Kiara</div>
+            <nav>
+                <ul style="list-style-type: none; padding: 0; display: flex; gap: 1rem;">
+                    <li><a href="entries/Squirrels.html" style="color: white; text-decoration: none;">Squirrels</a></li>
+                    <li><a href="entries/Oyster.html" style="color: white; text-decoration: none;">Oysters</a></li>
+                    <li><a href="entries/Red-tailed-hawk.html" style="color: white; text-decoration: none;">Red-tailed-hawk</a></li>
+                    <li><a href="#" style="color: white; text-decoration: none;">Contact</a></li>
+                    <li><button class="theme-switcher" id="themeSwitcher" aria-label="Toggle dark mode">🌞</button></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div class="title-block">
+            <h1>Hey New Yorker! :D</h1>
+            <p>This is an online platform that connects travelers with furry hosts, offering unique short-term rental experiences in New York.</p>
+        </div>
+
+        <section class="tertiary-block">
+            <div class="button-set">
+                <button class="custom-button">TYPE</button>
+                <button class="custom-button">PRICE</button>
+                <button class="custom-button">AMENITIES</button>
+                <button class="custom-button">HOST</button>
+                <button class="custom-button">MORE</button>
+            </div>
+        </section>
+
+        <!-- Secondary Block (Grid for Squirrel Dreys) -->
+        <section class="secondary-block">
+            <div class="grid-container">
+                <div class="card">
+                    <img src="images/squirrel.png" alt="Squirrel Dreys">
+                    <p>Dreys</p>
+                </div>
+                <div class="card">
+                    <img src="images/squirrel.png" alt="Squirrel Dreys">
+                    <p>Dreys</p>
+                </div>
+                <div class="card">
+                    <img src="images/squirrel.png" alt="Squirrel Dreys">
+                    <p>Dreys</p>
+                </div>
+                <div class="card">
+                    <img src="images/squirrel.png" alt="Squirrel Dreys">
+                    <p>Dreys</p>
+                </div>
+                <div class="card">
+                    <img src="images/squirrel.png" alt="Squirrel Dreys">
+                    <p>Dreys</p>
+                </div>
+                <div class="card">
+                    <img src="images/squirrel.png" alt="Squirrel Dreys">
+                    <p>Dreys</p>
+                </div>
+                <div class="card">
+                    <img src="images/squirrel.png" alt="Squirrel Dreys">
+                    <p>Dreys</p>
+                </div>
+                <div class="card">
+                    <img src="images/squirrel.png" alt="Squirrel Dreys">
+                    <p>Dreys</p>
+                </div>
+                <div class="card">
+                    <img src="images/squirrel.png" alt="Squirrel Dreys">
+                    <p>Dreys</p>
+                </div>
+                <div class="card">
+                    <img src="images/squirrel.png" alt="Squirrel Dreys">
+                    <p>Dreys</p>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <h3>Join our adventure!</h3>
+            <nav>
+                <a href="index.html" style="color: white; text-decoration: none;">Home</a>
+                <a href="#" style="color: white; text-decoration: none;">About</a>
+                <a href="#" style="color: white; text-decoration: none;">Contact</a>
+            </nav>
+            <p>&copy; 2024 Kiara | Unique Rentals</p>
+        </footer>
+    </main>
+
+    <script src="js/functions.js"></script>
 </body>
 </html>
