--- a/entries/Oyster.html
+++ b/entries/Oyster.html
@@ -45,7 +45,8 @@
 
       &nbsp; Hello fellow oysters! I’m part of a growing community in New York Harbor, and I’m calling out to you to join me in our vital mission: restoring the natural balance of our home. Once, oysters like us covered this harbor, filtering water, creating habitats, and even protecting the city from storms. But now, it’s time for a comeback, and we need your help.
     </p>
-    <img class="ssr" src="../images/Oysters/pixoyster/worldoyster.png" alt="image of selling oysters">
+    <img class="ssr" src="../images/Oysters/pixoyster/worldoyster.png" alt="image of selling oysters" styple="width:200px; float:left; margin-right:19px">
+
     <img src="../images/Oysters/colorful-tank.jpg" alt="image of selling oysters">
     <li><a href="../entries/Homepage.html" style="color: rgb(16, 212, 124); text-decoration: none;">Return to the homepage</a></li>
 
