--- a/entries/test1.0.html
+++ b/entries/test1.0.html
@@ -33,35 +33,89 @@
       ohohohoh<a href="">https://www.stardewvalleyconcert.com</a>
     </div>
   </header>
+
+  <div class="banner0-o">
+    <div class="imgsos">
+      <a href="" ><img src="../images/duckgogogo.jpg"></a>
+      <a href="" ><img src="../images/lingshi/duckgo.jpg"></a>
+      <a href="" ><img src="../images/lingshi/duckgogo.jpg"></a>
+    </div>
+    <div class="leftsmallrain">&lt;</div>
+    <div class="rightsmallrain">&gt;</div>
+    <div class="modal">
+      <div class="titleOwO">
+        <h2>let me do it for you kumi</h2>
+      </div>
+      <div class="dots">
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </div>
+  </div> 
+
   <section>
     <h2>chapter1</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sunt enim provident laborum beatae minima aliquid dolor libero culpa perferendis, quas quis dignissimos exercitationem impedit facilis magni velit dolorum animi!</p>
     <p>Commodi voluptas animi accusantium maxime illum veniam aperiam cumque sint expedita odio consectetur libero, fuga eos doloremque velit dicta quibusdam labore ipsum officia, amet itaque ducimus nulla magnam dolore! Quas!</p>
     <p>Voluptate vitae quibusdam quae debitis, illum repellendus unde natus voluptatem, tempora temporibus rem? Deserunt suscipit maiores aliquid nostrum similique perspiciatis quam, vitae est facere saepe ex quia dolor animi minima!</p>
+    <div class="chapter-image-frame">
+      <img src="../images/duckgogogo.jpg" alt="Chapter Image">
+      <div class="text-content">
+          <div class="title">AIM for happiness</div>
+          <div class="description">How do I live</div>
+      </div>
   </section>
   <section>
     <h2>chapter2</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur consequatur officiis repellendus, animi dolorem aspernatur iste qui sed? Incidunt ex impedit maiores veniam corporis? Praesentium nihil voluptatum est aliquam pariatur!</p>
     <p>Ducimus necessitatibus corrupti, voluptates, sequi temporibus, quibusdam neque tempore accusantium nobis facilis dignissimos laborum ut doloremque. Alias, ab magni quos laborum molestiae quo illo doloremque, odio eaque, sunt nulla adipisci.</p>
     <p>Iusto magnam tempore, consectetur corporis expedita accusamus tempora sunt quia sequi unde fugiat recusandae repellat nisi placeat animi autem saepe dolores in ipsa, ducimus voluptas! Animi quo nam doloribus nobis!</p>
+    <div class="chapter-image-frame">
+      <img src="../images/duckgogogo.jpg" alt="Chapter Image">
+      <div class="text-content">
+          <div class="title">AIM for happiness</div>
+          <div class="description">How do I live</div>
+      </div>
+  </div>
   </section>
   <section>
     <h2>chapter3</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quas autem ratione qui exercitationem suscipit ipsum quidem nisi, animi alias. Repellat temporibus ratione reprehenderit in maiores pariatur sint maxime consectetur.</p>
     <p>Ex et quis repellendus deserunt officia, modi vel doloribus tenetur, dolorem, repudiandae aut ullam magni cumque? Est facere, fuga qui, totam nihil sapiente expedita delectus ex voluptatem veritatis iure suscipit?</p>
     <p>Earum, molestiae cum. In nostrum et recusandae expedita magnam vitae praesentium, ipsam temporibus amet rem delectus! Sequi magni est pariatur illo sit, facere voluptatibus nihil ipsam aut possimus vitae asperiores!</p>
+    <div class="chapter-image-frame">
+      <img src="../images/duckgogogo.jpg" alt="Chapter Image">
+      <div class="text-content">
+          <div class="title">AIM for happiness</div>
+          <div class="description">How do I live</div>
+      </div>
   </section>
   <section>
     <h2>chapter4</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, corrupti? Sed quas deserunt atque iste fugit possimus quisquam vero perferendis culpa molestiae ab vitae, laboriosam, magni dicta soluta voluptatem odio.</p>
     <p>Incidunt sint, quos facilis, accusantium vitae rerum qui, iusto quaerat fugit assumenda delectus eius ratione nulla quia suscipit explicabo dolore perferendis? Architecto doloremque aut dolores, reiciendis inventore excepturi eius odio.</p>
     <p>Minus optio odio quae ex, consequuntur enim excepturi hic fugit odit iste qui eos, voluptates maxime modi sunt autem corporis quo aperiam obcaecati rerum vitae ab aspernatur. Quibusdam, quas necessitatibus!</p>
+    <div class="chapter-image-frame">
+      <img src="../images/duckgogogo.jpg" alt="Chapter Image">
+      <div class="text-content">
+          <div class="title">AIM for happiness</div>
+          <div class="description">How do I live</div>
+      </div>
   </section>
   <section>
     <h2>chapter5</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita velit harum eum? Impedit, libero animi harum incidunt fuga quo cumque officiis, et nam numquam perferendis alias nisi, nesciunt quod quidem.</p>
     <p>At soluta non adipisci temporibus. Veritatis sequi quam voluptatum ducimus, eveniet provident error, quo excepturi nisi consequuntur dolores delectus, accusamus iste autem omnis corrupti officiis at! Eos mollitia deleniti perspiciatis?</p>
     <p>Deleniti repudiandae sed rerum. Odit, maiores iusto quas nemo pariatur vitae adipisci, unde quam placeat veniam minima beatae ab quibusdam quasi eligendi aut ut maxime a, consectetur itaque inventore dolores.</p>
+    <div class="chapter-image-frame">
+      <img src="../images/duckgogogo.jpg" alt="Chapter Image">
+      <div class="text-content">
+          <div class="title">AIM for happiness</div>
+          <div class="description">How do I live</div>
+      </div>
   </section>
 </article>
 </div>
