--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                     <li><a href="entries/Squirrels.html" style="color: white; text-decoration: none;">Squirrels</a></li>
                     <li><a href="entries/Oyster.html" style="color: white; text-decoration: none;">Oysters</a></li>
                     <li><a href="entries/Red-tailed-hawk.html" style="color: white; text-decoration: none;">Red-tailed-hawk</a></li>
-                    <li><a href="#" style="color: white; text-decoration: none;">Contact</a></li>
+                    <li><a href="entries/test2.0.html" style="color: white; text-decoration: none;">Contact</a></li>
+                    <li><a href="entries/test1.0.html" style="color: white; text-decoration: none;">Contact</a></li>
                     <li><button class="theme-switcher" id="themeSwitcher" aria-label="Toggle dark mode">🌞</button></li>
                 </ul>
             </nav>
